🎨 fix for data summary wrapping on some states, more animations removed for print

--- a/assets/stylus/datapage-print.styl
+++ b/assets/stylus/datapage-print.styl
@@ -9,18 +9,24 @@
     > .inner
       padding 10px 0
       > .breadcrumb
+        animation none !important
         padding 0 0 10px 0
       > .copy
+        animation none !important
         padding 0 0 0px 0 !important
       > .copy:nth-child(2)
         font 30px/30px 'Rubik'
+        animation none !important
       > .stats
         height auto
         > .stat
           padding 10px 30px
+          width 16%
+          animation none !important
           > .value
             font h1b
             height 30px
+            animation none !important
           > .copy
             font c1ss
 
